# SRTG-Schedule

./: .travis.yml  CODE_OF_CONDUCT.md  LICENSE.md  README.md  scheduler_info.md
RTG-scheduler/: CMakeLists.txt  README.md  kernels.txt  releaseTimes.txt
RTG-scheduler/SRTG-JobCreator/: README.md
RTG-scheduler/SRTG-JobCreator/hardware-dependent/NVIDIA/: sample-1-mul_kernel.cu
RTG-scheduler/SRTG-JobCreator/simulation/: synthetic-mixed-jobCreator.py
RTG-scheduler/SRTG-JobCreator/simulation/scripts/: synthetic-aperiodic-jobCreator.py  synthetic-mixed-jobCreator.py
RTG-scheduler/SRTG-JobCreator/simulation/variation-scripts/: jobSetCreator-release-1_withLambda.py  jobSetCreator-release-2_withLambda.py
RTG-scheduler/SRTG-ResultAnalysis/: README.md  createSchedulerGraphs_numJobsVariable.py  createSchedulerGraphs_numProcessorsVariable.py  createSchedulerGraphs_withAccumulation.py
RTG-scheduler/SRTG-ResultAnalysis/scripts/: aperiodic-jobs-resultAnalyzer.py  createSchedulerGraphs.py  createSchedulerGraphs_delayScheduleVariable.py  createSchedulerGraphs_lambda.py  createSchedulerGraphs_numProcessorsVariable.py  createSchedulerGraphs_withAccumulation.py
RTG-scheduler/SRTG-ResultAnalysis/scripts/graphGen/: createGraphs_lambda.py  createGraphs_numGCUsVariable.py  createGraphs_numJobsVariable.py  createGraphs_schedulerBias.py
RTG-scheduler/data/: set1-kernels.txt
RTG-scheduler/include/: RTGS.h  RTGS_Global.h  profiler.h  profilerEvents.h
RTG-scheduler/pythonScripts/: createSchedulerGraphs-numJobsVariable.py  createSchedulerGraphs-numProcessorsVariable.py  createSchedulerGraphs-summary.py  createSchedulerGraphs.py  createSchedulerGraphs_delayScheduleVariable.py  createSchedulerGraphs_lambda.py  createSchedulerGraphs_numJobsVariable.py  createSchedulerGraphs_withAccumulation.py  jobSetCreator-release-1.py  jobSetCreator-release-1_withLambda.py  jobSetCreator-release-2.py  jobSetCreator-release-2_withLambda.py  jobSetCreator-release-2_withLambda_oddProcessors.py  jobSetCreator.py  runRTGScheduler.py
RTG-scheduler/source/: RTG-scheduler.c  RTGS-AEAP.c  RTGS-AEAP_ALAP_improve.c  RTGS-AEAP_ALT.c  RTGS-ALAP.c  RTGS-ALAP_ALT.c  RTGS-ALAP_improve.c  RTGS-dispatch.c  RTGS-entry.c  RTGS-file_handler.c  RTGS-functions.c  RTGS-helper_functions.c  RTGS-linked_list.c  RTGS-mode_1.c  RTGS-mode_2.c  RTGS-mode_3.c  RTGS-mode_4.c  RTGS-mode_5.c  RTGS-profiler.cpp  RTGS-queue_handler.c  RTGS_ALAP.c  profiler.cpp
RTG-scheduler/testData/: aperiodic-set-0-syntheticJobReleaseTimes.csv  aperiodic-set-0-syntheticJobs.csv  set1-jobReleaseTimes.txt  set1-jobs.txt  set12-jobReleaseTimes.txt  set4-jobs.txt  set5-jobReleaseTimes.txt  set5-jobs.txt  set7-jobReleaseTimes.txt  set8-jobReleaseTimes.txt  set9-jobs.txt
RTG-scheduler/testScripts/: runCodeCoverage.sh  runTest-10-proc.sh  runTest-10.sh  runTest-delay-32.sh
SRTG-Scheduler/: CMakeLists.txt  README.md
SRTG-Scheduler/SRTG-JobCreator/hardware-dependent/AMD/runcl/: CMakeLists.txt  runcl.cpp
SRTG-Scheduler/SRTG-JobCreator/simulation/scripts/: synthetic-aperiodic-jobCreator.py  synthetic-mixed-jobCreator.py  synthetic-periodic-jobCreator.py
SRTG-Scheduler/SRTG-JobCreator/simulation/variation-scripts/: jobSetCreator-release-1_withLambda.py  jobSetCreator-release-2_withLambda.py  jobSetCreator-release-2_withLambda_oddProcessors.py
SRTG-Scheduler/SRTG-ResultAnalysis/: README.md
SRTG-Scheduler/SRTG-ResultAnalysis/scripts/: aperiodic-jobs-resultAnalyzer.py
SRTG-Scheduler/SRTG-ResultAnalysis/scripts/graphGen/: createGraphs_lambda.py  createGraphs_numGCUsVariable.py  createGraphs_numJobsVariable.py  createGraphs_schedulerBias.py
SRTG-Scheduler/include/: RTGS.h  RTGS_Global.h  profiler.h  profilerEvents.h
SRTG-Scheduler/pythonScripts/: runRTGScheduler.py
SRTG-Scheduler/source/: RTGS-AEAP.c  RTGS-AEAP_ALAP_improve.c  RTGS-entry.c  RTGS-file_handler.c  RTGS-helper_functions.c  RTGS-mode_1.c  RTGS-mode_2.c  RTGS-mode_3.c  RTGS-mode_4.c  RTGS-mode_5.c  RTGS-queue_handler.c  profiler.cpp
SRTG-Scheduler/testData/: aperiodic-set-0-syntheticJobReleaseTimes.csv  aperiodic-set-0-syntheticJobs.csv  error-1-jobReleaseTimes.txt  error-1-jobs.txt  error-2-jobReleaseTimes.txt  error-2-jobs.txt  error-3-jobReleaseTimes.txt  error-3-jobs.txt  error-4-jobs.txt  set1-jobReleaseTimes.txt  set1-jobs.txt  set10-jobReleaseTimes.txt  set10-jobs.txt  set11-jobReleaseTimes.txt  set11-jobs.txt  set12-jobReleaseTimes.txt  set12-jobs.txt  set2-jobReleaseTimes.txt  set2-jobs.txt  set3-jobReleaseTimes.txt  set3-jobs.txt  set4-jobReleaseTimes.txt  set4-jobs.txt  set5-jobReleaseTimes.txt  set5-jobs.txt  set6-jobReleaseTimes.txt  set6-jobs.txt  set7-jobReleaseTimes.txt  set7-jobs.txt  set8-jobReleaseTimes.txt  set8-jobs.txt  set9-jobReleaseTimes.txt  set9-jobs.txt
SRTG-Scheduler/testScripts/: runCodeCoverage.sh  runTest-10-proc.sh  runTest.sh  runTestSets.sh
SRTG-Scheduler/testScripts/variations/: runTest-10.sh  runTest-delay-32.sh
documents/: README.md  RTG_Algorithm.md
documents/additional_info/LiteratureReview/: Review_overview.xlsx
